player.css
/*************************************************************
 * This is the style for the Video player itself
 * 
 * @author (Anyanwu Benedict Chukwuemeka)
 * @version (v0.01)
 *************************************************************/


html:root
{
    --settingSectionTitleIconBoxWidth: 30px;
    --ItemLeftWidth: 30px;
    --ItemRightWidth: 75px;
    --showlistAutoPlayTogglePadding: 0px;
    --genSettTransition: 300ms;
}


svg.hide
{
    display: none;
}


.vid_bdr
{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    aspect-ratio: 16 / 9;
    max-height: 900px;
    max-height: 75vh;
}

.vid_bdr .vid_box
{
    width: 100%;
    max-width: var(--genMaxContainerWidth);
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.video_player, .video-controls, .video-timer, .options
{
    display: flex;
    align-items: center;
    justify-content: center;
}

.video_player
{
    position: relative;
    width: 98%;
    max-width: var(--genMaxContainerWidth);
    height: 100%;
    border-radius: 5px;
    background: #000;
    aspect-ratio: 16 / 9;
    box-shadow: 0 10px 20px #0000001a;
    -moz-user-select: -moz-none;
    -moz-user-select: none;
    -webkit-user-select: none;
    user-select: none;
    overflow: hidden;
}

.video_player.fullscreen
{
    max-width: 100%;
    width: 100%;
    height: 100vh;
    border-radius: 0px;
}

.video_player .loader
{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #00000010;
    transition: all 2s ease-out;
    pointer-events: none;
    z-index: 15;
    display: flex;
}

.video_player .loader .spinner
{
    width: 60px;
    height: 60px;
    border-right: 3px solid var(--genWhiteTypeBright);
    border-bottom: 3px solid var(--genWhiteTypeBright);
    border-left: 3px solid var(--genWhiteTypeBright);
    border-top: 1px solid transparent;
    border-radius: 50%;
    animation: ani 2000ms linear infinite;
    -moz-user-select: -moz-none;
    -moz-user-select: none;
    -webkit-user-select: none;
    user-select: none;
    pointer-events: none;
}


@keyframes ani
{
    0%
    {
        transform: translateY(0%) rotate(0deg);
    }
    50%
    {
        transform: translateY(0%) rotate(180deg);
    }
    100%
    {
        transform: translateY(0%) rotate(360deg);
    }
}

.video_player video
{
    width: 100%;
    -moz-user-select: -moz-none;
    -moz-user-select: none;
    -webkit-user-select: none;
    user-select: none;
    pointer-events: none;
    z-index: 1;
}

.video_player video::cue
{
    opacity: 0;
}

.episode_title_bdr
{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 50px;
    background: transparent;
    transition: all 300ms ease;
    z-index: 4;
}

.video_player.show-controls .episode_title_bdr
{
    background: linear-gradient(to bottom, #000000a1 , transparent);
}

.episode_title_bdr .episode_title_box
{
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding: 5px 15px;
}

.episode_title_box .companyTitle
{
    width: -moz-fit-content;
    width: fit-content;
    height: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    color: inherit;
    text-transform: uppercase;
}

.episode_title_box .companyTitle .head
{
    color: var(--genGreenTypeDark1);
    font-size: 14px;
}

.episode_title_box .companyTitle .tail
{
    color: #6b6a6a;
    font-size: 13px;
}

.video_player.show-controls .episode_title_bdr
.episode_title_box .companyTitle .head
{
    color: var(--genGreenTypeLight);
}


.video_player.show-controls .episode_title_bdr
.episode_title_box .companyTitle .tail
{
    color: var(--genWhiteTypeLight);
}

.episode_title_box .episodeTitle
{
    color: #6b6a6a;
    font-size: 13px;
}

.video_player.show-controls .episode_title_bdr
.episodeTitle
{
    color: var(--genWhiteTypeLight);
}

.wrapper
{
    position: absolute;
    left: 0;
    right: 0;
    bottom: -35px;
    opacity: 0;
    transition: all 0.08s ease;
    pointer-events: none;
    z-index: 10;
}

.video_player.show-controls .wrapper
{
    bottom: 0;
    opacity: 1;
    transition: all 0.13s ease;
    pointer-events: all;
}

.wrapper::before
{
    content: "";
    position: absolute;
    bottom: 0;
    width: 100%;
    height: calc(100% + 35px);
    background: linear-gradient(to top, #000000b3, transparent);
    pointer-events: none;
    z-index: -1;
}

.video-timeline
{
    height: 7px;
    width: 100%;
    cursor: pointer;
}

.wrapper .progress-area
{
    position: relative;
    width: calc(100% - 25px);
    height: 3px;
    margin: auto;
    background: #f0f0f063;
    transition: all 200ms ease-in-out;
    cursor: pointer;
}

.progress-area .progress-bar
{
    position: relative;
    width: 0%;
    background: var(--genGreenTypeMid);
    height: inherit;
    border-radius: inherit;
    cursor: pointer;
}

.progress-area .progress-bar::before
{
    content: "";
    position: absolute;
    width: 13px;
    height: 13px;
    border-radius: 50%;
    right: -5px;
    top: 50%;
    transform: translateY(-50%);
    background: #ffffff;
    opacity: 0;
    visibility: visible;
    transition: all 300ms ease-in-out;
    -moz-user-select: -moz-none;
    -moz-user-select: none;
    -webkit-user-select: none;
    user-select: none;
    pointer-events: none;
}

.progress-area .bufferedBar
{
    position: absolute;
    top: 0%;
    right: 0%;
    width: 100%;
    height: inherit;
}
/* ... */

